--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta name="viewpot" content="width=device-width,intial scale=1.0">
    </head>
    <body>
-      <h1><center>CHAPPIDI SRIYA</center></h1>
+      <h1>CHAPPIDI SRIYA</h1>
       <img src="sriya.jpg"
       alt="image" height="300px" width="350px"> 
       <h2>SUMMARY</h2>
